--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {}
+@layer components {
+  body {
+    letter-spacing: 0.02rem;
+  }
+}
 
-@layer base {}
+@layer base {
+  h1 {
+    @apply text-4xl;
+    @apply font-bold;
+  }
+
+  h2 {
+    @apply text-3xl;
+    @apply font-semibold;
+  }
+
+  h3 {
+    @apply text-xl;
+    @apply font-medium;
+  }
+
+  h4 {
+    @apply text-lg;
+    @apply font-normal;
+  }
+}
