update main layout, design home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 @layer components {
+
+  html,
   body {
     letter-spacing: 0.02rem;
+    /* font-size: 15.5px; */
   }
+
+
 }
 
 @layer base {
